# real-time-fraud-detector

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  app.py  dvc.yaml  mlops_plan.md  params.yaml  pyproject.toml  render.yaml  requirements-api.txt  requirements-dev.txt  requirements-monitoring.txt  requirements-training.txt  requirements.txt
.dvc/: config
.github/workflows/: ci.yml  deploy.yml  retrain.yml  train.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20260404_0001_init_schema.py
api/: main.py  metrics.py  model_loader.py  shadow.py
api/routers/: ingest_status.py  predict.py
config/: settings.py
db/: models.py
docker/: Dockerfile.api  Dockerfile.gradio  Dockerfile.monitoring  Dockerfile.training  docker-compose.yml
feast/: feature_store.yaml  features.py
gx/: validate.py
gx/expectations/: fraud_transactions_suite.json
k8s/mlops/: drift-cronjob.yaml  fraud-api-deployment.yaml
k8s/seaweedfs/: secret.yaml  values.yaml
kafka/: consumer.py  lake_consumer.py  producer.py
monitoring/: alert_webhook.py  run_drift.py
monitoring/alertmanager/: alertmanager.yml
monitoring/grafana/dashboards/: overview.json
monitoring/prometheus/: prometheus.yml
requirements/: dev.txt
scripts/: ingestion_ctl.py  model_ctl.py  pipeline_gate.sh  wait_for_postgres.py  wait_for_s3.py
tests/integration/: test_ingestion_e2e.py
tests/load/: locustfile.py
tests/model/: test_model_quality.py
tests/unit/: test_api.py  test_feature_engineering.py
training/: feature_engineering.py  train.py
(+2 files in other folders)
